[project]
name = "comfyui-lmcq"
description = "ComfyUI small node toolkit, this toolkit is mainly to update some practical small nodes, to make a contribution to the comfyui ecosystem, PS: 'LMCQ' is the abbreviation of the team name\nNOTE: The files in the repo are not organized, which may lead to update issues."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["bitsandbytes>=0.43.0", "torch>=1.7.0", "numpy>=1.19.0", "cryptography>=41.0.0"]

[project.urls]
Repository = "https://github.com/sebord/ComfyUI-LMCQ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LMCQ"
Icon = ""
